<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fifo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FifoQueue_dr" >

    <TextView
        android:id="@+id/txtLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/btnfifoQueue" />

    <TextView
        android:id="@+id/fifoNode8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fifoNode7"
        android:layout_alignBottom="@+id/fifoNode7"
        android:layout_toRightOf="@+id/fifoNode7"
        android:background="@drawable/style_queue"
        android:gravity="center"
        android:height="@dimen/LinkNode"
        android:text="@string/txtBlank"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:width="@dimen/nodeWidthQueue" />

    <TextView
        android:id="@+id/fifoNode7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fifoNode6"
        android:layout_alignBottom="@+id/fifoNode6"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@+id/fifoNode6"
        android:background="@drawable/style_queue"
        android:gravity="center"
        android:height="@dimen/LinkNode"
        android:text="@string/txtBlank"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:width="@dimen/nodeWidthQueue" />

    <TextView
        android:id="@+id/fifoNode6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fifoNode5"
        android:layout_alignBottom="@+id/fifoNode5"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@+id/fifoNode5"
        android:background="@drawable/style_queue"
        android:gravity="center"
        android:height="@dimen/LinkNode"
        android:text="@string/txtBlank"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:width="@dimen/nodeWidthQueue" />

    <TextView
        android:id="@+id/fifoNode4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fifoNode3"
        android:layout_alignBottom="@+id/fifoNode3"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/fifoNode5"
        android:background="@drawable/style_queue"
        android:gravity="center"
        android:height="@dimen/LinkNode"
        android:text="@string/txtBlank"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:width="@dimen/nodeWidthQueue" />

    <TextView
        android:id="@+id/fifoNode5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fifoNode4"
        android:layout_alignBottom="@+id/fifoNode4"
        android:layout_alignLeft="@+id/txtLink"
        android:layout_marginRight="5dp"
        android:background="@drawable/style_queue"
        android:gravity="center"
        android:height="@dimen/LinkNode"
        android:text="@string/txtBlank"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:width="@dimen/nodeWidthQueue" />

    <TextView
        android:id="@+id/fifoNode3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fifoNode2"
        android:layout_alignBottom="@+id/fifoNode2"
        android:layout_toLeftOf="@+id/fifoNode4"
        android:background="@drawable/style_queue"
        android:gravity="center"
        android:height="@dimen/LinkNode"
        android:text="@string/txtBlank"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:width="@dimen/nodeWidthQueue" />

    <TextView
        android:id="@+id/fifoNode2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fifoNode1"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/fifoNode3"
        android:background="@drawable/style_queue"
        android:gravity="center"
        android:height="@dimen/LinkNode"
        android:text="@string/txtBlank"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:width="@dimen/nodeWidthQueue" />

    <TextView
        android:id="@+id/fifoNode1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="120dp"
        android:layout_toLeftOf="@+id/fifoNode2"
        android:background="@drawable/style_queue"
        android:gravity="center"
        android:height="@dimen/LinkNode"
        android:text="@string/txtBlank"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:width="@dimen/nodeWidthQueue" />

    <TextView
        android:id="@+id/fifoNode9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fifoNode8"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/fifoNode8"
        android:background="@drawable/style_queue"
        android:gravity="center"
        android:height="@dimen/LinkNode"
        android:text="@string/txtBlank"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:width="@dimen/nodeWidthQueue" />

    <ImageView
        android:id="@+id/Qrear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fifoNode2"
        android:layout_alignLeft="@+id/fifoNode1"
        android:layout_marginLeft="17dp"
        android:src="@drawable/queue_rear" />

    <ImageView
        android:id="@+id/Qfront"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fifoNode1"
        android:layout_below="@+id/fifoNode1"
        android:src="@drawable/queue_front" />

    <TextView
        android:id="@+id/txtRear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Qrear1"
        android:layout_toLeftOf="@+id/fifoNode2"
        android:gravity="center"
        android:height="25dp"
        android:text="REAR : -1"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:width="80dp" />

    <TextView
        android:id="@+id/txtFront"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/fifoNode1"
        android:layout_below="@+id/Qfront"
        android:height="25dp"
        android:text="FRONT : -1"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:width="80dp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLink"
        android:layout_centerHorizontal="true"
        android:gravity="center" >

        <Button
            android:id="@+id/btnCAdd"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_color"
            android:onClick="@string/btnQAdd"
            android:padding="@dimen/btnStackControl"
            android:text="@string/btnQAdd" />

        <Button
            android:id="@+id/btnCDel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btnMarqueue"
            android:layout_marginRight="@dimen/btnMarqueue"
            android:background="@drawable/custom_color"
            android:onClick="@string/btnQdel"
            android:padding="@dimen/btnStackControl"
            android:text="@string/btnQdel" />

        <Button
            android:id="@+id/btnCClear"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_color"
            android:onClick="@string/btnClear"
            android:padding="@dimen/btnStackControl"
            android:text="@string/btnClear"
            android:width="80dp" />

        <Button
            android:id="@+id/btnCDocs"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btnMarqueue"
            android:background="@drawable/custom_color"
            android:onClick="@string/btnDocs"
            android:padding="@dimen/btnStackControl"
            android:text="@string/btnDocs"
            android:width="80dp" />

        <Button
            android:id="@+id/btnfifoCqueue"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btnMarqueue"
            android:background="@drawable/custom_color"
            android:onClick="@string/btnC"
            android:padding="@dimen/btnStackControl"
            android:text="@string/btnCirQueue"
            android:width="80dp" />
    </LinearLayout>

</RelativeLayout>