<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/queue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CircularQueue_dr" >

    <TextView
        android:id="@+id/txtLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/btncircularQueue" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLink"
        android:layout_centerHorizontal="true"
        android:gravity="center" >

        <Button
            android:id="@+id/btnCAdd"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_color"
            android:onClick="@string/btnQAdd"
            android:padding="@dimen/btnStackControl"
            android:text="@string/btnQAdd" />

        <Button
            android:id="@+id/btnCDel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btnMarqueue"
            android:layout_marginRight="@dimen/btnMarqueue"
            android:background="@drawable/custom_color"
            android:onClick="@string/btnQdel"
            android:padding="@dimen/btnStackControl"
            android:text="@string/btnQdel" />

        <Button
            android:id="@+id/btnCClear"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_color"
            android:onClick="@string/btnClear"
            android:padding="@dimen/btnStackControl"
            android:text="@string/btnClear"
            android:width="80dp" />

        <Button
            android:id="@+id/btnCDocs"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btnMarqueue"
            android:background="@drawable/custom_color"
            android:onClick="@string/btnDocs"
            android:padding="@dimen/btnStackControl"
            android:text="@string/btnDocs"
            android:width="80dp" />

        <Button
            android:id="@+id/btnfifoCqueue"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btnMarqueue"
            android:background="@drawable/custom_color"
            android:onClick="@string/btnCfifo"
            android:padding="@dimen/btnStackControl"
            android:text="@string/btnCfifo"
            android:width="80dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtCfront"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCrear"
        android:layout_below="@+id/CirFrontArrow"
        android:height="25dp"
        android:text="FRONT : -1"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:width="80dp" />

    <ImageView
        android:id="@+id/CirFrontArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtCfront"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginRight="45dp"
        android:src="@drawable/queue_front" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/CNode1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:background="@drawable/style_queue"
            android:gravity="center"
            android:height="@dimen/LinkNode"
            android:text="@string/txtBlank"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="@dimen/nodeWidthQueue" />

        <TextView
            android:id="@+id/CNode2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/style_queue"
            android:gravity="center"
            android:height="@dimen/LinkNode"
            android:text="@string/txtBlank"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="@dimen/nodeWidthQueue" />

        <TextView
            android:id="@+id/CNode3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/style_queue"
            android:gravity="center"
            android:height="@dimen/LinkNode"
            android:text="@string/txtBlank"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="@dimen/nodeWidthQueue" />

        <TextView
            android:id="@+id/CNode4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/style_queue"
            android:gravity="center"
            android:height="@dimen/LinkNode"
            android:text="@string/txtBlank"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="@dimen/nodeWidthQueue" />

        <TextView
            android:id="@+id/CNode5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/style_queue"
            android:gravity="center"
            android:height="@dimen/LinkNode"
            android:text="@string/txtBlank"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="@dimen/nodeWidthQueue" />

        <TextView
            android:id="@+id/CNode6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/style_queue"
            android:gravity="center"
            android:height="@dimen/LinkNode"
            android:text="@string/txtBlank"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="@dimen/nodeWidthQueue" />

        <TextView
            android:id="@+id/CNode7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/style_queue"
            android:gravity="center"
            android:height="@dimen/LinkNode"
            android:text="@string/txtBlank"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="@dimen/nodeWidthQueue" />

        <TextView
            android:id="@+id/CNode8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_queue"
            android:gravity="center"
            android:height="@dimen/LinkNode"
            android:text="@string/txtBlank"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="@dimen/nodeWidthQueue" />

        <TextView
            android:id="@+id/CNode9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/style_queue"
            android:gravity="center"
            android:height="@dimen/LinkNode"
            android:text="@string/txtBlank"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="@dimen/nodeWidthQueue" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginRight="184dp"
        android:layout_marginTop="32dp"
        android:layout_toLeftOf="@+id/txtLink"
        android:gravity="center"
        android:height="25dp"
        android:text="REAR : -1"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:width="80dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtCrear"
        android:layout_below="@+id/txtCrear"
        android:layout_marginRight="22dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/queue_rear" />

</RelativeLayout>